2001-09-19  Kjartan Maraas  <kmaraas@gnome.org>

	* load-graph.c: Remove extra #include <config.h>
	* prettytable.c: Move #include <config.h> to the top
	to make i18n work. Please try now.
 	
2001-09-19  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c (free_info): call gdk_pixbuf_unref to free the 
	pixbuf and a memory leak.

2001-09-19  Kevn Vandersloot <kfv101@psu.edu>

	* callbacks.c (cb_simple_dialog_close): call gtk_main_quit
	to close the app

	* interface.c: some reshuffling of the UI code. don't call
	gtk_widget_show on the main window untill all updating
	has been done.
	Improve the ctrl-alt-del dialog by giving a title

	* prettytable.c: call gettext () on the string since
	the app names arent getting translated. Still doesn't 
	work.

	* procdialogs.c: remove some debugging spew. Change a pref
	tab label to match the main notebook tab label.

	* procman.c: load the desktop files after the main window
	has been created. This seems to reduce the amount of 
	crashing due to the delay loading. Seems that the problem is
	unthreadsafeness of some gnome functions.
	Also let the simple dialog share the gtk main loop instead of
	calling gnome_dialog_run. This makes it truly modeless

	* proctable.c: remove some unneeded commented stuff.

2001-09-16  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c: improve the search. Use strstr to search for
	any instance of the search string. Also find the next match
	when the same search string is used. Also make sure that
	that the matching process is actually displayed.

2001-09-16  Kevin Vandersloot <kfv101@psu.edu>

	* procman.c: add new variable desktop_load_finish to monitor
	the delay loading. Call pthrea_init here and do pthread_join
	when the loading is done.

	* prettytable.c: just load the .desktop files in the thread
	function

	* interface.c: change "end app..." to "close app..."

2001-09-15  Yves Kurz <kurzy1@isbiel.ch>

	* infoview.c: Changed the frame alignment to default.
	* interface.c: ditto