@@ -22,6 +22,7 @@
 
 #include <procman.h>
 
+gint		get_sys_pane_pos (void);
 GtkWidget* 	create_main_window (ProcData *data);
 GtkWidget*	create_simple_view_dialog (ProcData *procdata);
 void		toggle_infoview (ProcData *data);
