@@ -1,3 +1,10 @@
+2001-09-22  Kevin Vandersloot <kfv101@psu.edu>
+
+	* interface.c: make the disks frame seperated from the graphs
+	by a vpaned
+	
+	* procman.[c,h]: save the paned pos
+
 2001-09-19  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* load-graph.c: Remove extra #include <config.h>
